[fix] message date not visible and add box-shadow to chat sidebar

--- a/src/components/chat/components/DirectChat/components/sidebar/styles.module.css
+++ b/src/components/chat/components/DirectChat/components/sidebar/styles.module.css
@@ -1,4 +1,5 @@
 .sidebar {
+    box-shadow: -14px 43px 50px 9px rgb(0 0 0 / 6%);
     width: 230px;
 }
 
